package com.liyi.design.pattern.structure.decorator;

public class ShortCoffee extends Coffee {


    public ShortCoffee(){
        setDes("Short Coffee");
        setPrice(5f);
    }
}
